<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".LogIn"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/wasta2"/>
        <TextView
            android:layout_width="66dp"
            android:layout_height="60dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />
    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="90dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/log_in"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInByGoogle"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@color/colorDivider"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/log_in_with_facebook"
            android:src="@drawable/fcb"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/log_in_with_facebook"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/facebook"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv1"
            android:layout_toRightOf="@id/tv1"
            android:clickable="true"
            android:onClick="signin"
            android:focusable="true"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="OnClick,RtlHardcoded" />
    </RelativeLayout>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/forgot_my_password"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
