<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/service_details"
            android:textColor="#ffffff"
            android:textSize="20dp" />


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="right"
        android:layoutDirection="ltr"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:paddingRight="10dp"
            android:scaleType="fitCenter"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_bookmark_24px"
            tools:ignore="VectorDrawableCompat"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="225dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/Service1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="285dp"
            tools:layout_editor_absoluteY="88dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/ServiceDetails1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="285dp"
            tools:layout_editor_absoluteY="88dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/ServicePic"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="285dp"
            tools:layout_editor_absoluteY="88dp" />

        <ImageView
            android:id="@+id/imageService2"
            android:layout_width="168dp"
            android:layout_height="99dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:paddingRight="10dp"
            android:src="@drawable/image_01" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/ServiceRating"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="285dp"
            tools:layout_editor_absoluteY="88dp" />

        <RatingBar
            android:id="@+id/simpleRatingBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:numStars="5"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/Comments"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="285dp"
            tools:layout_editor_absoluteY="88dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:paddingRight="10dp"
            android:text="@string/report_problem"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="185dp"
        android:layout_height="325dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/id_profiel"
            android:layout_width="119dp"
            android:layout_height="76dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:paddingRight="10dp"
            android:scaleType="fitCenter"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_baseline_face_24px"
            tools:ignore="VectorDrawableCompat"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="225dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/ContactInf"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="285dp"
            tools:layout_editor_absoluteY="88dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/WriteYourPhoneNumberHere"
            android:inputType="phone"
            android:paddingRight="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="226dp" />

        <ImageView
            android:id="@+id/fb_acount"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:gravity="right"
            android:paddingRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/facebook_01" />

    </LinearLayout>
</RelativeLayout>